Docker-compose works proparly

--- a/src/frontend/app/classes/queries.ipynb
+++ b/src/frontend/app/classes/queries.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,9 +10,9 @@
     "\n",
     "PGHOST = 'localhost'\n",
     "PGPORT = \"5432\"\n",
-    "PGDATABASE = 'postgres'\n",
+    "PGDATABASE = 'IceCreamEmpire'\n",
     "PGUSER = 'postgres'\n",
-    "PGPASSWORD = 'icecreamempire_s4'\n",
+    "PGPASSWORD = '1234'\n",
     "\n",
     "\n",
     "class Queries:\n",
@@ -44,24 +44,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5c181dbd435a1b8cef8a045eb69b98c433d405988338d1f89314dd8306f2226d\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "! docker run --name basic-postgres --rm -e POSTGRES_USER=postgres -e POSTGRES_PASSWORD=icecreamempire_s4 -e PGDATA=/var/lib/postgresql/data/pgdata -v /tmp:/var/lib/postgresql/data -p 5432:5432 -d postgres:14.1-alpine"
+    "! docker run --name basic-postgres --rm -e POSTGRES_USER=postgres -e POSTGRES_PASSWORD=1234 -e POSTGRES_DATABASE=IceCreamEmpire -p 5432:5432 -d postgres:14.1-alpine"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,41 +94,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(1, 'hallo', 1)]"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "db.get_users()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "InFailedSqlTransaction",
-     "evalue": "current transaction is aborted, commands ignored until end of transaction block\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mInFailedSqlTransaction\u001b[0m                    Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[15], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m sql\u001b[39m=\u001b[39m \u001b[39m\"\"\"\u001b[39m\n\u001b[1;32m      2\u001b[0m \u001b[39m    SELECT * FROM Student\u001b[39m\n\u001b[1;32m      3\u001b[0m \u001b[39m\"\"\"\u001b[39m\n\u001b[0;32m----> 4\u001b[0m cursor\u001b[39m.\u001b[39;49mexecute(sql)\n\u001b[1;32m      5\u001b[0m cursor\u001b[39m.\u001b[39mfetchall()\n",
-      "\u001b[0;31mInFailedSqlTransaction\u001b[0m: current transaction is aborted, commands ignored until end of transaction block\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sql= \"\"\"\n",
     "    SELECT * FROM Student\n",
