Added function to execute sql statements

--- a/src/frontend/app/classes/queries.ipynb
+++ b/src/frontend/app/classes/queries.ipynb
@@ -7,6 +7,7 @@
    "outputs": [],
    "source": [
     "import psycopg2\n",
+    "from pandas import DataFrame\n",
     "\n",
     "PGHOST = 'localhost'\n",
     "PGPORT = \"5432\"\n",
@@ -20,26 +21,45 @@
     "        self.conn = psycopg2.connect(host=PGHOST, port=PGPORT, dbname=PGDATABASE, user=PGUSER, password=PGPASSWORD)\n",
     "        \n",
     "\n",
-    "    def get_users(self):\n",
+    "    def get_vehicles(self):\n",
     "        \"\"\"\n",
     "        Example Function to execute a sql statement\n",
     "        \"\"\"\n",
     "        sql= \"\"\"\n",
-    "            SELECT * FROM Student\n",
+    "            SELECT * FROM Vehicles\n",
     "        \"\"\"\n",
-    "        return self.__execute_sql(sql)\n",
+    "        return self.sql(sql)\n",
     "    \n",
-    "    def __execute_sql(self, sql: str):\n",
-    "        try:\n",
-    "            cur = self.conn.cursor()\n",
-    "            cur.execute(sql)\n",
-    "            return cur.fetchall()\n",
-    "        except (Exception, psycopg2.DatabaseError) as error:\n",
-    "            print(error)\n",
     "    \n",
+    "    def sql(self, sql: str)-> DataFrame:\n",
+    "        \"\"\"\n",
+    "        Execute a query and returns a DataFrame\n",
+    "        \"\"\"\n",
+    "        # Open a cursor to perform database operations\n",
+    "        cursor = self.conn.cursor()\n",
+    "        sql = sql.strip()\n",
     "\n",
-    "# comand to start the db by its own\n",
-    "# docker run --name basic-postgres --rm -e POSTGRES_USER=postgres -e POSTGRES_PASSWORD=icecreamempire_s4 -e PGDATA=/var/lib/postgresql/data/pgdata -v /tmp:/var/lib/postgresql/data -p 5432:5432 -it postgres:14.1-alpine"
+    "        # execute the query\n",
+    "        try:\n",
+    "            cursor.execute(sql)\n",
+    "            if sql.lower().startswith(\"select\"):\n",
+    "                columns = list(cursor.description)\n",
+    "                result = cursor.fetchall()\n",
+    "                results = []\n",
+    "                for row in result:\n",
+    "                    row_dict = {}\n",
+    "                    for i, col in enumerate(columns):\n",
+    "                        row_dict[col.name] = row[i]\n",
+    "                    results.append(row_dict)\n",
+    "                return DataFrame(results)\n",
+    "            else:\n",
+    "                self.conn.commit()\n",
+    "                print(\"Successfully inserted data\")\n",
+    "        except (Exception, psycopg2.DatabaseError) as e:\n",
+    "            cursor.close()\n",
+    "            print(e)\n",
+    "        finally:\n",
+    "            cursor.close()"
    ]
   },
   {
@@ -48,57 +68,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "! docker run --name basic-postgres --rm -e POSTGRES_USER=postgres -e POSTGRES_PASSWORD=1234 -e POSTGRES_DATABASE=IceCreamEmpire -p 5432:5432 -d postgres:14.1-alpine"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "db = Queries()\n",
-    "conn = db.conn\n",
-    "cursor = conn.cursor()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "create_table_query = \"create table Student \\\n",
-    "        (id int primary key ,   \\\n",
-    "        fname varchar(30)  not null, \\\n",
-    "        year int); \"\n",
-    "cursor = conn.cursor()\n",
-    "cursor.execute(create_table_query)\n",
-    "conn.commit()\n",
-    "cursor.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "insert_query = \"INSERT INTO Student (id, fname, year)\" \\\n",
-    "                \"VALUES (1, 'hallo', 1)\"\n",
-    "cursor = conn.cursor()\n",
-    "cursor.execute(insert_query)\n",
-    "conn.commit()\n",
-    "cursor.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "db.get_users()"
+    "db = Queries()"
    ]
   },
   {
@@ -108,10 +78,29 @@
    "outputs": [],
    "source": [
     "sql= \"\"\"\n",
-    "    SELECT * FROM Student\n",
-    "\"\"\"\n",
-    "cursor.execute(sql)\n",
-    "cursor.fetchall()"
+    "    INSERT INTO Vehicles (Vehicle_id, type, storage_capacity) VALUES\n",
+    "        (20000, 'Truck', 1000),\n",
+    "        (20050, 'Van', 800),\n",
+    "        (40000, 'Car', 600); \n",
+    "    \"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db.sql(sql)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db.sql(\"SELECT * FROM Vehicles\")"
    ]
   }
  ],
