--- a/src/frontend/app/classes/queries.ipynb
+++ b/src/frontend/app/classes/queries.ipynb
@@ -2,14 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
     "import psycopg2\n",
+    "import pandas as pd\n",
+    "\n",
+    "from sqlalchemy import create_engine\n",
+    "from sqlalchemy import text\n",
     "from pandas import DataFrame\n",
     "\n",
-    "PGHOST = 'localhost'\n",
+    "\n",
+    "PGHOST = \"postgres-IceCreamEmpire\" \n",
     "PGPORT = \"5432\"\n",
     "PGDATABASE = 'IceCreamEmpire'\n",
     "PGUSER = 'postgres'\n",
@@ -18,8 +23,8 @@
     "\n",
     "class Queries:\n",
     "    def __init__(self)-> None:\n",
-    "        self.conn = psycopg2.connect(host=PGHOST, port=PGPORT, dbname=PGDATABASE, user=PGUSER, password=PGPASSWORD)\n",
-    "        \n",
+    "        # self.conn = psycopg2.connect(host=PGHOST, port=PGPORT, dbname=PGDATABASE, user=PGUSER, password=PGPASSWORD)\n",
+    "        self.engine = create_engine('postgresql://postgres:1234@postgres-IceCreamEmpire:5432/IceCreamEmpire')\n",
     "\n",
     "    def get_vehicles(self):\n",
     "        \"\"\"\n",
@@ -30,15 +35,35 @@
     "        \"\"\"\n",
     "        return self.sql(sql)\n",
     "    \n",
-    "    \n",
-    "    def sql(self, sql: str)-> DataFrame:\n",
+    "    def get_dtypes(self,table_name) -> pd.DataFrame:\n",
+    "        q =\"\"\"\n",
+    "               SELECT column_name, data_type\n",
+    "            FROM information_schema.columns\n",
+    "            WHERE table_schema = 'public' AND \n",
+    "            table_name = 'Flavors';\n",
+    "        \"\"\" \n",
+    "        \n",
+    "        return self.sql(q)\n",
+    "       \n",
+    "    def convert_to_numeric(self, col):\n",
+    "        # Check if column is of dtype object\n",
+    "        if col.dtypes == 'object':\n",
+    "            # Try to convert column to numeric\n",
+    "            col = pd.to_numeric(col, errors='ignore')\n",
+    "            # If column is now numeric, check if it can be converted to int\n",
+    "            if pd.api.types.is_numeric_dtype(col):\n",
+    "                if col.eq(col.astype(int)).all():\n",
+    "                    col = col.astype(int)\n",
+    "        return col\n",
+    "\n",
+    "    def sql(self, sql: str)-> pd.DataFrame:\n",
     "        \"\"\"\n",
     "        Execute a query and returns a DataFrame\n",
     "        \"\"\"\n",
     "        # Open a cursor to perform database operations\n",
     "        cursor = self.conn.cursor()\n",
     "        sql = sql.strip()\n",
-    "\n",
+    "        \n",
     "        # execute the query\n",
     "        try:\n",
     "            cursor.execute(sql)\n",
@@ -51,7 +76,13 @@
     "                    for i, col in enumerate(columns):\n",
     "                        row_dict[col.name] = row[i]\n",
     "                    results.append(row_dict)\n",
-    "                return DataFrame(results)\n",
+    "\n",
+    "                df = pd.DataFrame(results)\n",
+    "\n",
+    "                # needed so streamlit dataframe editing works correctly\n",
+    "                df = df.convert_dtypes() # for some reason column with 1.12 is not recognized as numeric\n",
+    "                df = df.apply(self.convert_to_numeric, axis=0) # therefore use this\n",
+    "                return df\n",
     "            else:\n",
     "                self.conn.commit()\n",
     "                print(\"Successfully inserted data\")\n",
@@ -59,12 +90,17 @@
     "            cursor.close()\n",
     "            print(e)\n",
     "        finally:\n",
-    "            cursor.close()"
+    "            cursor.close()\n",
+    "\n",
+    "    def sql_test(self):\n",
+    "        with self.engine.connect() as connection:\n",
+    "            result = connection.execute(text(\"SELECT * FROM Vehicles\")).mappings().all()\n",
+    "            return DataFrame(result)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,9 +123,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'sql' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[50], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m db\u001b[39m.\u001b[39msql(sql)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'sql' is not defined"
+     ]
+    }
+   ],
    "source": [
     "db.sql(sql)"
    ]
